# MolGenOOD

./: .gitignore  LICENSE  README.md  pyproject.toml
notebooks/: construct_dataset.ipynb  run_benchmark.ipynb
scripts/: construct_dataset.py  plot_benchmark_results.py  run_benchmark.py
src/data/: __init__.py  chemistry.py  constants.py  fetch_smiles.py  fetch_zinc.py
src/probes/: evaluate.py  knn.py  rf.py
