[project]
name = "mol-gen-ood"
version = "0.1.0"
description = "A benchmark for evaluating molecular property prediction models under out-of-distribution shifts, highlighting performance degradation across distributional splits."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datamol>=0.12.5",
    "ipywidgets>=8.1.7",
    "jupyterlab>=4.4.5",
    "nglview>=3.1.4",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "splito>=0.1.4",
    "tqdm>=4.67.1",
]
